# pjmai-rs

./: .gitignore  .pjmairc  .pjmrc  CHANGES.md  CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  README.md  build.rs  documents.samplrc  install.sh  sample.toml  source-pjm.sh  uninstall.sh  update.sh
demo/: basic-workflow.tape  env-approval.tape  error-handling.tape  full-workflow.tape  project-management.tape  prompt-integration.tape  scan-workflow.tape  setup-demo.sh
doc/: bak-main.txt  notes.txt
docs/: ELI5.md  GROUPS_DESIGN.md  TODO.md  ai_agent_instructions.md  scan.md  shell-support.md  user-guide.md
elisp/: pjmai-test.el  pjmai.el  reset.el  setup-screen-recording.el
elisp/docs/: architecture.md  design.md  plan.md  prd.md  research.txt  status.md  usage.md
src/: args.rs  command.rs  config.rs  error.rs  io.rs  lib.rs  main.rs  output.rs  projects.rs  util.rs
tests/: integration.rs
