[package]
name = "pjm1"
version = "0.1.0"
authors = ["Mike Wright <wrightmikea@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.9"
serde = "1.0.104"
serde_derive = "1.0.104"
toml = "0.5.6"
